samples/_failures_safe/1761156771_7ae9ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04885425.c: In function ‘main’:
./samples/SAFE/__tmp_04885425.c:152:9: error: expected expression at end of input
  152 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_04885425.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04885425.c:152:9: error: expected declaration or statement at end of input
